removed icon for prov

--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -34,7 +34,7 @@
 
                             <p><i class="fa fa-fw fa-briefcase"></i>Project :</p>
 
-                            <p><i class="fa fa-fw fa-code-fork"></i>Provenance :</p>
+                            <p><i class="fa fa-fw"></i>Provenance :</p>
 
                             <p><i class="fa fa-fw fa-code-fork"></i>Process :</p>
 
