--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -13,66 +13,74 @@
             <div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <i class=" fa fa-fw fa-book"></i> <a ng-click="showGloss = !showGloss">Glossary</a>
+                        <i class=" fa fa-fw fa-book"></i> <a ng-click="showGlossary = !showGlossary">Glossary</a>
 
-                        <div style="padding-top: 20px; padding-left: 5px;" ng-show="showGloss">
+                        <div style="padding-top: 20px; padding-left: 5px;" ng-show="showGlossary">
                             <h4 class="text-center">Glossary</h4>
                             <hr/>
                             <div class="row">
-                                <div class="col-xs-3"><i class="fa fa-fw fa-tachometer"></i>Dashboard : </div>
+                                <div class="col-xs-3"><i class="fa fa-fw fa-tachometer"></i>Dashboard:</div>
                                 <div class="col-xs-8">is the area where you can see all
-                                    panels.</div>
+                                    panels for a project.
+                                </div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-3"><i class="fa fa-fw fa-pencil-square-o"></i> Draft : </div>
+                                <div class="col-xs-3"><i class="fa fa-fw fa-pencil-square-o"></i> Draft:</div>
+                                <div class="col-xs-8">can be defined as an incomplete provenance step. When you save
+                                    your provenance as draft you can go back and modiify any step
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw fa-comment"></i>Global reviews:</div>
                                 <div class="col-xs-8"></div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-3"><i class="fa fa-fw fa-pencil-square-o"></i> Draft : </div>
+                                <div class="col-xs-3"><i class="fa fa-fw"></i>Last login:</div>
+                                <div class="col-xs-8">will provide your last login date onto Materials Commons.</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw fa-briefcase"></i>Project:</div>
                                 <div class="col-xs-8"></div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-3"><i class="fa fa-fw fa-pencil-square-o"></i> Draft : </div>
+                                <div class="col-xs-3"><i class="fa fa-fw"></i>Provenance:</div>
                                 <div class="col-xs-8"></div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-3"><i class="fa fa-fw fa-pencil-square-o"></i> Draft : </div>
+                                <div class="col-xs-3"><i class="fa fa-fw fa-code-fork"></i>Process:</div>
                                 <div class="col-xs-8"></div>
                             </div>
                             <div class="row">
-                                <div class="col-xs-3"><i class="fa fa-fw fa-pencil-square-o"></i> Draft : </div>
+                                <div class="col-xs-3"><i class="fa fa-fw"></i>Panel:</div>
+                                <div class="col-xs-8">is a container to list various items (such
+                                    as reviews/samples/notes/processes/files) inside a project
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw fa-comment"></i>Review:</div>
                                 <div class="col-xs-8"></div>
                             </div>
-                            <p></p>
+                            <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw fa-cubes"></i>Sample:</div>
+                                <div class="col-xs-8">is defined as a material which will be an input into the
+                                    process.
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw "></i>Template:</div>
+                                <div class="col-xs-8">is a placeholder for detailed steps inside a
+                                    process(experiment/computation/data analysis). There are set of pre-defined templates
+                                    on Materials Commons.
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-3"><i class="fa fa-fw fa-clipboard"></i>Sideboard:</div>
+                                <div class="col-xs-8">is an area where you can add/drag various items to compare
+                                    side-by-side.
+                                </div>
+                            </div>
 
-                            <p></p>
-
-                            <p><i class="fa fa-fw fa-comment"></i>Global review :</p>
-
-                            <p><i class="fa fa-fw fa-home"></i>Home :</p>
-
-                            <p><i class="fa fa-fw"></i>Last login :</p>
-
-                            <p><i class="fa fa-fw"></i>Preferred template :</p>
-
-                            <p><i class="fa fa-fw fa-briefcase"></i>Project :</p>
-
-                            <p><i class="fa fa-fw"></i>Provenance :</p>
-
-                            <p><i class="fa fa-fw fa-code-fork"></i>Process :</p>
-
-                            <p><i class="fa fa-fw fa-code-fork"></i>Panel : is a container to list various items (such
-                                as reviews/samples/notes/processes/files) inside a project</p>
-
-                            <p><i class="fa fa-fw fa-comment"></i>Review :</p>
-
-                            <p><i class="fa fa-fw fa-cubes"></i>Sample :</p>
-
-                            <p><i class="fa fa-fw "></i>Template :</p>
-
-                            <p><i class="fa fa-fw fa-clipboard"></i>Sideboard :</p>
-
-                            <div class="watermark">Draft :</div>
+                            <div class="watermark">Draft</div>
                         </div>
                     </li>
                     <li class="list-group-item">
