prov define changed

--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-xs-3"><i class="fa fa-fw"></i>Provenance:</div>
-                                <div class="col-xs-8">is defined as the origin or source of data</div>
+                                <div class="col-xs-8">is defined as the history of data</div>
                             </div>
                             <div class="row">
                                 <div class="col-xs-3"><i class="fa fa-fw fa-code-fork"></i>Process:</div>
