--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -13,9 +13,84 @@
             <div>
                 <ul class="list-group">
                     <li class="list-group-item">
+                        <i class=" fa fa-fw fa-bars"></i>
+                        <a ng-click="userStart = !userStart">User Start</a>
+
+                        <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="userStart">
+                            <h4 class="text-center">User Start</h4>
+                            <hr/>
+                            <div class="row">
+                                User Start is intended to help all the new users who are trying to understand what
+                                MaterialsCommons does.
+                            </div>
+                            <b>Overview</b>
+
+                            <p>After you login into Materials Commons first time we expect you will have no
+                                projects/data entered.
+                                So first step is to upload some files. </p>
+                            <b>Create Project</b>
+
+                            <p>In-order to upload files first you have to create project(or workspace). To create a
+                                project click on drop-down list and hit "New Project" which will ask you to enter name
+                                for the project.</p>
+                            <b>Why you have to create project ?</b>
+
+                            <p>Project is like your workspace where you can store files , notes, samples , provenance
+                                related to that project.</p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/user-start/create-project-ustart.png">
+                            </div>
+                            <b>Upload files</b>
+
+                            <p>Under the files panel you will see an empty project folder is created. Now you can click
+                                on upload icon <i class="fa fa-fw fa-upload"></i>
+                                to upload your files into the project.</p>
+                            <b>Why you have to upload files ?</b>
+
+                            <p> Prior to creating the provenance you will have to upload your data onto Material
+                                Commons. So that this uploaded data will be available during provenance creation.</p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/user-start/upload-files-ustart.png">
+                            </div>
+                            <b>Create Sample</b>
+
+                            <p>Under the samples panel click on + icon and fill in the details of the sample and hit
+                                create which will add sample to the list.</p>
+                            <b>Why you have to create sample ?</b>
+
+                            <p>Sample is a piece of material which you wanted to perform some experiments on. Similar to
+                                file uploads you have to create your sample so that it will be available for you to
+                                choose during provenance creation </p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/user-start/create-sample-ustart.png">
+                            </div>
+                            <b>Associate Provenance</b>
+
+                            <p>Under the processes panel click on the + icon to create process. Then
+                                from the dropdown list select what type of experiment/analysis you wanted to run and
+                                then associate your data at the input/output steps.</p>
+                            <b>Why you have to create provenance?</b>
+
+                            <p>The purpose of creating provenance is to keep track of the history of changes done to
+                                the data items. </p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/user-start/create-provenance-ustart.png">
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
                         <i class=" fa fa-fw fa-book"></i> <a ng-click="showGlossary = !showGlossary">Glossary</a>
 
-                        <div style="background-color: #e9e7dd;padding-top: 20px; padding-left: 5px;" ng-show="showGlossary">
+                        <div style="background-color: #e9e7dd;padding-top: 20px; padding-left: 5px;"
+                             ng-show="showGlossary">
                             <h4 class="text-center">Glossary</h4>
                             <hr/>
                             <div class="row">
@@ -91,6 +166,12 @@
                     <li class="list-group-item">
                         <i class=" fa fa-fw fa-bars"></i>
                         <a ng-click="showNav = !showNav">Nav bar</a>
+                        <span class="pull-right col-xs-3">
+                            <a class="thumbnail">
+                                <img src="assets/img/userguide/navbar1.png"
+                                     alt="Generic placeholder thumbnail">
+                            </a>
+                        </span>
 
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showNav">
                             <h4 class="text-center">Navigation Bar</h4>
@@ -139,7 +220,12 @@
                     <li class="list-group-item">
                         <i class=" fa fa-fw fa-briefcase"></i>
                         <a ng-click="showProjectBar = !showProjectBar">Project Bar</a>
-
+                        <span class="pull-right col-xs-3">
+                            <a class="thumbnail">
+                                <img src="assets/img/userguide/project-bar.png"
+                                     alt="Generic placeholder thumbnail">
+                            </a>
+                        </span>
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showProjectBar">
                             <h4 class="text-center">Project Bar</h4>
                             <hr/>
@@ -212,7 +298,12 @@
 
                     <li class="list-group-item">
                         <i class=" fa fa-fw fa-home"></i> <a ng-click="showHome = !showHome">Home Page</a>
-
+                        <span class="pull-right col-xs-3">
+                            <a class="thumbnail">
+                                <img src="assets/img/userguide/home-annotated.png"
+                                     alt="Generic placeholder thumbnail">
+                            </a>
+                        </span>
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showHome">
                             <h4 class="text-center">Home Page</h4>
                             <hr/>
