--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -20,14 +20,19 @@
                             <h4 class="text-center">User Start</h4>
                             <hr/>
                             <div class="row">
+                                When you login for the first time into Materials Commons we expect you will have no
+                                projects / data entered.
                                 User Start is intended to help all the new users who are trying to understand what
                                 MaterialsCommons does.
                             </div>
                             <b>Overview</b>
 
-                            <p>After you login into Materials Commons first time we expect you will have no
-                                projects/data entered.
-                                So first step is to upload some files. </p>
+                            <p>Image below provides you with the basic overview of steps </p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/user-start/user-start.png">
+                            </div>
                             <b>Create Project</b>
 
                             <p>In-order to upload files first you have to create project(or workspace). To create a
@@ -45,11 +50,12 @@
                             <b>Upload files</b>
 
                             <p>Under the files panel you will see an empty project folder is created. Now you can click
-                                on upload icon <i class="fa fa-fw fa-upload"></i>
+                                the upload icon <i class="fa fa-fw fa-upload"></i>
                                 to upload your files into the project.</p>
                             <b>Why you have to upload files ?</b>
 
-                            <p> Prior to creating the provenance you will have to upload your data onto Material
+                            <p> Prior to creating the provenance (refer to the flowchart) you will have to upload your
+                                data onto Material
                                 Commons. So that this uploaded data will be available during provenance creation.</p>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
@@ -62,7 +68,7 @@
                                 create which will add sample to the list.</p>
                             <b>Why you have to create sample ?</b>
 
-                            <p>Sample is a piece of material which you wanted to perform some experiments on. Similar to
+                            <p>Sample is a piece of material on which you wanted to perform some experiments. Similar to
                                 file uploads you have to create your sample so that it will be available for you to
                                 choose during provenance creation </p>
 
@@ -226,6 +232,7 @@
                                      alt="Generic placeholder thumbnail">
                             </a>
                         </span>
+
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showProjectBar">
                             <h4 class="text-center">Project Bar</h4>
                             <hr/>
@@ -304,6 +311,7 @@
                                      alt="Generic placeholder thumbnail">
                             </a>
                         </span>
+
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showHome">
                             <h4 class="text-center">Home Page</h4>
                             <hr/>
