--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -78,8 +78,8 @@
                             </div>
                             <b>Associate Provenance</b>
 
-                            <p>Under the processes panel click on the + icon to create process. Then
-                                from the dropdown list select what type of experiment/analysis you wanted to run and
+                            <p>Under the processes panel click on the <i class="fa fa-fw fa-plus"></i> icon to create process. Then
+                                from the drop-down list select what type of experiment/analysis you wanted to run and
                                 then associate your data at the input/output steps.</p>
                             <b>Why you have to create provenance?</b>
 
