--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -27,7 +27,8 @@
                             </div>
                             <b>Overview</b>
 
-                            <p>Image below provides you with the basic overview of steps </p>
+                            <p>Image below provides you with the basic overview. Each of the steps are described in
+                                detail below: </p>
 
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive"
@@ -78,7 +79,8 @@
                             </div>
                             <b>Associate Provenance</b>
 
-                            <p>Under the processes panel click on the <i class="fa fa-fw fa-plus"></i> icon to create process. Then
+                            <p>Under the processes panel click on the <i class="fa fa-fw fa-plus"></i> icon to create
+                                process. Then
                                 from the drop-down list select what type of experiment/analysis you wanted to run and
                                 then associate your data at the input/output steps.</p>
                             <b>Why you have to create provenance?</b>
@@ -172,12 +174,6 @@
                     <li class="list-group-item">
                         <i class=" fa fa-fw fa-bars"></i>
                         <a ng-click="showNav = !showNav">Nav bar</a>
-                        <span class="pull-right col-xs-3">
-                            <a class="thumbnail">
-                                <img src="assets/img/userguide/navbar1.png"
-                                     alt="Generic placeholder thumbnail">
-                            </a>
-                        </span>
 
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showNav">
                             <h4 class="text-center">Navigation Bar</h4>
@@ -226,12 +222,6 @@
                     <li class="list-group-item">
                         <i class=" fa fa-fw fa-briefcase"></i>
                         <a ng-click="showProjectBar = !showProjectBar">Project Bar</a>
-                        <span class="pull-right col-xs-3">
-                            <a class="thumbnail">
-                                <img src="assets/img/userguide/project-bar.png"
-                                     alt="Generic placeholder thumbnail">
-                            </a>
-                        </span>
 
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showProjectBar">
                             <h4 class="text-center">Project Bar</h4>
@@ -304,13 +294,8 @@
                     </li>
 
                     <li class="list-group-item">
-                        <i class=" fa fa-fw fa-home"></i> <a ng-click="showHome = !showHome">Home Page</a>
-                        <span class="pull-right col-xs-3">
-                            <a class="thumbnail">
-                                <img src="assets/img/userguide/home-annotated.png"
-                                     alt="Generic placeholder thumbnail">
-                            </a>
-                        </span>
+                        <i class=" fa fa-fw fa-home"></i> <a ng-click="showHome = !showHome">Home
+                        Page</a>
 
                         <div style="padding-top: 20px;background-color: #e9e7dd;" ng-show="showHome">
                             <h4 class="text-center">Home Page</h4>
