Updates and brainstorms to integrate new samples/provenance model.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -233,6 +233,7 @@
 <script src="application/core/projects/project/help/userguide.js"></script>
 <script src="application/core/projects/project/provenance/provenance.js"></script>
 <script src="application/core/projects/project/provenance/overview.js"></script>
+<script src="application/core/projects/project/provenance/wizard/wizard.js"></script>
 <script src="application/core/projects/project/provenance/show-process-properties.js"></script>
 <script src="application/core/projects/project/provenance/show-process-settings.js"></script>
 <script src="application/core/projects/project/provenance/show-process-files.js"></script>
