--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -41,6 +41,9 @@
         <div class="col-xs-12">
             <div class="col-xs-2">
                 <a ng-click="openProvWizard()" title="Provenance Wizard">
+                    <i class="fa fa-fw fa-2x fa-magic task-bar-tool"
+                        ng-class="{'tool-inactive': !showPanel('new-wizard'), 'tool-active': showPanel('new-wizard')}">
+                    </i>
                 </a>
                 <a ng-click="openDrafts()" title="Drafts">
                     <i class="fa fa-fw fa-2x fa-pencil-square-o task-bar-tool"
