--- a/website/app/application/core/projects/project/provenance/wizard/wizard.html
+++ b/website/app/application/core/projects/project/provenance/wizard/wizard.html
@@ -8,7 +8,7 @@
                 <button ng-click="addBetween()" class="btn btn-success">
                     Add Between
                 </button>
-                <div style="min-height: 600px">
+                <div style="border: 1px solid black; margin-top: 4px">
                     <vis-network ng-model="data" on-select="onSelect" options="options"></vis-network>
                 </div>
             </div>
