--- a/website/app/index.html
+++ b/website/app/index.html
@@ -234,6 +234,11 @@
 <script src="application/core/projects/project/provenance/provenance.js"></script>
 <script src="application/core/projects/project/provenance/overview.js"></script>
 <script src="application/core/projects/project/provenance/wizard/wizard.js"></script>
+<script src="application/core/projects/project/provenance/wizard/node-details.js"></script>
+<script src="application/core/projects/project/provenance/wizard/edge-details.js"></script>
+<script src="application/core/projects/project/provenance/wizard/templates.js"></script>
+<script src="application/core/projects/project/provenance/wizard/display-template.js"></script>
+<script src="application/core/projects/project/provenance/wizard/show-template-details.js"></script>
 <script src="application/core/projects/project/provenance/show-process-properties.js"></script>
 <script src="application/core/projects/project/provenance/show-process-settings.js"></script>
 <script src="application/core/projects/project/provenance/show-process-files.js"></script>
