Update template display.

--- a/website/app/application/core/projects/project/provenance/wizard/show-template-details.html
+++ b/website/app/application/core/projects/project/provenance/wizard/show-template-details.html
@@ -1,9 +1,6 @@
 <div>
     <div class="row">
-        <br>
-        <div class="row">
-            Description: {{template.description}}<br>
-        </div>
+        <h3>Description: {{template.description}}</h3>
     </div>
     <div class="row item-details">
         <h4>Process Attributes</h4>
@@ -17,6 +14,9 @@
                     Description: {{attribute.description}}
                     <br/>
                     Required: {{attribute.required}}
+                    <div ng-if="attribute.default_value">
+                        Default Value: {{attribute.default_value}}
+                    </div>
                 </li>
             </ul>
         </div>
@@ -33,6 +33,28 @@
                     Description: {{attribute.description}}
                     <br/>
                     Required: {{attribute.required}}
+                    <div ng-if="attribute.default_value">
+                        Default Value: {{attribute.default_value}}
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row item-details">
+        <h4>Outputs</h4>
+        <div class="row" ng-repeat="output in template.outputs">
+            <strong>Category: {{output.category}}</strong>
+            <ul class="list-group">
+                <li class="list-group-item"
+                    ng-repeat="attribute in output.attributes">
+                    Attribute: {{attribute.name}}
+                    <br/>
+                    Description: {{attribute.description}}
+                    <br/>
+                    Required: {{attribute.required}}
+                    <div ng-if="attribute.default_value">
+                        Default Value: {{attribute.default_value}}
+                    </div>
                 </li>
             </ul>
         </div>
