--- a/website/app/index.html
+++ b/website/app/index.html
@@ -92,6 +92,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular-sanitize.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
+<script src="http://code.highcharts.com/highcharts.src.js"></script>
 
 <!--
 <script src="assets/js/jquery-1.11.2.min.js"></script>
@@ -129,8 +130,7 @@
 <script src="assets/js/socket.io.js"></script>
 <script src="assets/js/angular/angular-toastr.js"></script>
 <script src="assets/js/angular/angular-masonry.js"></script>
-<script src="assets/js/angular/tc-angular-chartjs.min.js"></script>
-<script src="assets/js/Chart.min.js"></script>
+<script src="assets/js/angular/highcharts-ng.min.js"></script>
 <script src="assets/js/vis.js"></script>
 <script src="assets/js/angular/angular-filter.js"></script>
 <script src="assets/js/moment.min.js"></script>
