Hard code testing highcharts.

--- a/website/app/application/core/projects/project/provenance/wizard/node-details.html
+++ b/website/app/application/core/projects/project/provenance/wizard/node-details.html
@@ -1,3 +1,15 @@
 <div>
-    Node details here
+    <div class="row">
+        <div class="col-xs-6">
+            <highchart config="chartConfig"></highchart>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4">
+            <highchart config="chartConfig2"></highchart>
+        </div>
+    </div>
+    <div class="row">
+        <highchart config="dynamicChartConfig"></highchart>
+    </div>
 </div>
