--- a/website/app/index.html
+++ b/website/app/index.html
@@ -30,6 +30,7 @@
     <link href="assets/css/vis.css" rel="stylesheet">
     <link href="assets/css/fullcalendar.css" rel="stylesheet">
     <link href="assets/css/nsPopover.css" rel="stylesheet">
+    <link href="assets/css/handsontable.full.css" rel="stylesheet">
     <!-- Application style sheet -->
     <link href="style-3.css" rel="stylesheet">
     <!-- endbuild -->
@@ -95,6 +96,8 @@
 <!--
 <script src="assets/js/jquery-1.11.2.min.js"></script>
 <script src="assets/js/jquery-ui.min.js"></script>
+<script src="assets/js/handsontable.full.js"></script>
+<script src="assets/js/angular/ngHandsontable.jsx"></script>
 <script src="assets/js/angular/masonry.pkgd.min.js"></script>
 <script src="assets/js/angular/imagesloaded.pkgd.min.js"></script>
 <script src="assets/js/angular/angular.min.js"></script>
@@ -105,6 +108,8 @@
 <script src="assets/js/angular/restangular.min.js"></script>
 -->
 <!-- build:jsassets js/assets.js -->
+<script src="assets/js/handsontable.full.js"></script>
+<script src="assets/js/angular/ngHandsontable.js"></script>
 <script src="assets/js/flow.js"></script>
 <script src="assets/js/select2.min.js"></script>
 <script src="assets/js/TreeModel-min.js"></script>
