--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -31,3 +31,30 @@
         </mc-tree>
     </div>
 </div>
+
+<!--<div class="row">-->
+    <!--<div class="col-xs-6">-->
+        <!--<div class="row">-->
+            <!--<input class="form-control" ng-model="search">-->
+        <!--</div>-->
+        <!--<div class="row">-->
+            <!--<div class="panel panel-primary">-->
+                <!--<div class="panel-body">-->
+                    <!--<file-upload-panel></file-upload-panel>-->
+                    <!--<mc-tree items="files"-->
+                             <!--matches="matchingFiles"-->
+                             <!--orderby="'name'">-->
+                    <!--</mc-tree>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+
+    <!--</div>-->
+    <!--<div class="col-xs-6">-->
+        <!--<div class="row" ng-if="file">-->
+            <!--{{file}}-->
+            <!--<mc-tree-leaf item="file"></mc-tree-leaf>-->
+        <!--</div>-->
+    <!--</div>-->
+
+<!--</div>-->
