--- a/website/app/index.html
+++ b/website/app/index.html
@@ -326,6 +326,7 @@
 <script src="application/services/mcfile.js"></script>
 <script src="application/services/mc-flow.js"></script>
 <script src="application/services/homepage-customize.js"></script>
+<script src="application/services/file-service.js"></script>
 <script src="application/core/projects/services/toggle-dragbuttons-service.js"></script>
 <script src="application/services/model/projects-service.js"></script>
 <script src="application/services/model/templates-service.js"></script>
