--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,7 +1,8 @@
-<div class="row">
+<div class="row"> <br>
+    <h4>Files</h4>
     <div class="col-xs-6">
         <div class="row">
-            <input class="form-control">
+            <input ng-model="searchInput" placeholder="Search Files..." class="form-control">
         </div>
         <div class="row">
             <div class="panel-body home-panel-body no-max-height">
@@ -15,6 +16,29 @@
         </div>
     </div>
     <div class="col-xs-6">
-          <h4>Details</h4>
+          <h4>{{activeFile.name}}</h4>
+        <div  ng-switch="fileType">
+            <div ng-switch-when="image">
+                <img class="img-responsive" ng-src="{{fileSrc(activeFile)}}">
+            </div>
+            <div ng-switch-when="pdf">
+                <div class="embed-responsive embed-responsive-4by3">
+                    <embed class="col-xs-8 embed-responsive-item"
+                           ng-src="{{fileSrc(activeFile)}}">
+                    </embed>
+                </div>
+            </div>
+            <div ng-switch-default>
+                <div ng-if="activeFile.size <= 10000"
+                     hljs
+                     include="fileSrc(activeFile)">
+                </div>
+                <code ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
+                      style="white-space:pre-line" ng-include="fileSrc(activeFile)">
+                </code>
+                <div ng-if="activeFile.size > 2000000">File too big to display</div>
+            </div>
+        </div>
+
     </div>
 </div>
