--- a/website/app/application/directives/mc-tree-header.html
+++ b/website/app/application/directives/mc-tree-header.html
@@ -9,8 +9,8 @@
             <span ng-if="item.type !== 'datafile'" data-toggle="tooltip" data-placement="top" title="{{item.fullname}}"
                   style="color: #389dc1"
                   ui-draggable="true" drag="item">{{::item.displayname}}</span>
-            <span ng-if="item.type === 'datafile'" data-toggle="tooltip" data-placement="top" title="{{item.fullname}}"
-                  style="color: #389dc1"
+            <span ng-if="item.type === 'datafile'"  title="{{item.fullname}}"
+                  style="color: #389dc1"    ng-click="openFile(item)"
                   ui-draggable="true" drag="item">{{::item.displayname}}</span>
         </span>
         <span class="pull-right">
